--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 # .github/workflows/cypress.yml
-name: Run Cypress Tests
-run : npm run cypress : run
+- name: Run Cypress Tests
+  run: npm run cypress:run
+
 
 on:
   push:
