--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Cypress Tests
+name: CI and Deployment
 
 on:
   push:
@@ -7,26 +7,29 @@ on:
     branches: [ main ]
 
 jobs:
-  cypress-run:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      
+      - uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '20.x'
 
-      - name: Install Dependencies
-        run: npm install
+      - run: npm install
 
+      - run: npm run build
+      
+      # Hier kannst du weitere Tests oder Schritte hinzufügen, falls nötig
+      - run: npm test
+
+      # Führe die Cypress-Tests aus
       - name: Run Cypress Tests
         run: npm run cypress:run
-
-      - name: Build Project
-        run: npm run build
-
+      
+      # Wenn die Cypress-Tests erfolgreich sind, deploye auf GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
