--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
 
@@ -18,18 +18,15 @@ jobs:
         with:
           node-version: '20.x'
 
-      - run: npm install
+      - name: Install Dependencies
+        run: npm install
 
-      - run: npm run build
+      - name: Build
+        run: npm run build
       
-      # Hier kannst du weitere Tests oder Schritte hinzufügen, falls nötig
-      - run: npm test
+      - name: Run Tests
+        run: npm run test # Hier kannst du auch deine Cypress-Tests einfügen
 
-      # Führe die Cypress-Tests aus
-      - name: Run Cypress Tests
-        run: npm run cypress:run
-      
-      # Wenn die Cypress-Tests erfolgreich sind, deploye auf GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
