--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,29 @@
-name: CI and Deployment
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '20.x'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-      
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      # Weitere Schritte für das Bauen deines Projekts...
+  
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Run Tests
-        run: npm run test # Hier kannst du auch deine Cypress-Tests einfügen
+        run: npm test
+      # Weitere Schritte zum Testen...
 
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
